[gd_scene load_steps=3 format=3 uid="uid://cdpti7uoynbuk"]

[ext_resource type="Script" uid="uid://d1uma25ylis4u" path="res://scenes/ui/score_label.gd" id="1_ql60w"]
[ext_resource type="Script" uid="uid://o27ce6kbqnby" path="res://scenes/ui/game_over_layer.gd" id="1_rx32e"]

[node name="GameOverLayer" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_rx32e")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -91.0
offset_right = 80.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Your spaceship 
ran out of fuel :(

You didn't make it 
on time to the date"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = 14.0
offset_right = 65.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
text = "Final Score:"
horizontal_alignment = 1
script = ExtResource("1_ql60w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = 42.0
offset_right = 46.5
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2

[node name="RetryButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Retry Level
"

[node name="MainMenuButton2" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"
